<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageButton
        android:id="@+id/ibClose"
        android:contentDescription="@string/close_image_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cross"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        />

    <TextView
        android:id="@+id/tvQuestionWord"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ibClose"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="96dp"
        android:textSize="50sp"
        android:text="Galaxy"
        tools:text="Galaxy"
        android:fontFamily="@font/nunito_bold"
        />

    <LinearLayout
        android:id="@+id/layoutVariants"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvQuestionWord"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <!--первая кнопка-->

        <LinearLayout
            android:id="@+id/layoutAnswer1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/shape_rounded_containers"
            >

            <TextView
                android:id="@+id/tvVariantNumber1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="1"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_marginStart="12dp"
                android:background="@drawable/shape_rounded_variants"
                android:textColor="#888992"
                />

            <TextView
                android:id="@+id/tvVariantValue1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                tools:text="Сломать"
                android:text="Сломать"
                style="@style/TextViewVariantStyle"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <!--вторая кнопка-->

        <LinearLayout
            android:id="@+id/layoutAnswer2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/shape_rounded_containers"
            android:layout_marginTop="17dp"
            >
            <TextView
                android:id="@+id/tvVariantNumber2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="2"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_marginStart="12dp"
                android:background="@drawable/shape_rounded_variants"
                android:textColor="#888992"
                />

            <TextView
                android:id="@+id/tvVariantValue2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                tools:text="Сон"
                android:text="Сон"
                style="@style/TextViewVariantStyle"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <!--третья кнопка-->

        <LinearLayout
            android:id="@+id/layoutAnswer3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/shape_rounded_containers"
            android:layout_marginTop="17dp"
            >
            <TextView
                android:id="@+id/tvVariantNumber3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="3"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_marginStart="12dp"
                android:background="@drawable/shape_rounded_variants"
                android:textColor="#888992"
                />

            <TextView
                android:id="@+id/tvVariantValue3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                tools:text="Галактика"
                android:text="Галактика"
                style="@style/TextViewVariantStyle"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <!--четвертая кнопка-->

        <LinearLayout
            android:id="@+id/layoutAnswer4"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/shape_rounded_containers"
            android:layout_marginTop="17dp"
            >
            <TextView
                android:id="@+id/tvVariantNumber4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="4"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_marginStart="12dp"
                android:background="@drawable/shape_rounded_variants"
                android:textColor="#888992"
                />

            <TextView
                android:id="@+id/tvVariantValue4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                tools:text="Утюг"
                android:text="Утюг"
                style="@style/TextViewVariantStyle"
                tools:ignore="HardcodedText" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnSkip"
        android:background="@drawable/shape_rounded_button"
        android:layout_width="311dp"
        android:layout_height="58dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="32dp"
        android:text="@string/skip"
        android:textSize="16sp"
        android:textAllCaps="true"
        android:visibility="visible"
        android:fontFamily="@font/nunito_bold"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutResult"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#0EAD69"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_height="150dp"
        >

        <ImageView
            android:id="@+id/ivResultIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/correct_answer_icon"
            android:src="@drawable/ic_correct"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="18dp"
            />

        <TextView
            android:id="@+id/tvResultMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ivResultIcon"
            app:layout_constraintBottom_toBottomOf="@id/ivResultIcon"
            app:layout_constraintStart_toEndOf="@id/ivResultIcon"
            android:text="@string/correct"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/rubik_regular"
            />

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="311dp"
            android:layout_height="58dp"
            android:text="@string/button_continue"
            android:fontFamily="@font/nunito_bold"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivResultIcon"
            android:layout_marginBottom="24dp"
            android:textSize="16sp"
            android:textColor="#0EAD69"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/shape_rounded_continue"
            android:layout_marginTop="12dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    
</androidx.constraintlayout.widget.ConstraintLayout>